--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ p span {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  padding: 20px;
+  padding: 20px 20px 10px;
   overflow: hidden;
   width: 200px;
   height: 300x;
